Moved dependency check plugin from buildinfra. Updated the build file.